k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techchallenge2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: techchallenge2
  template:
    metadata:
      labels:
        app: techchallenge2
    spec:
      containers:
        - name: techchallenge2
          image: 000540852129.dkr.ecr.us-east-1.amazonaws.com/techchallenge2:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
