k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: techchallenge2-service
spec:
  type: ClusterIP
  selector:
    app: techchallenge2
  ports:
    - port: 80
      targetPort: 5000
